--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -2,3 +2,5 @@
 @import 'partials/normalize.scss';
 @import 'partials/ui.scss';
 @import 'partials/header.scss';
+@import 'partials/footer.scss';
+@import 'partials/section_hero.scss';
