--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -94,5 +94,100 @@ input {
   --primary-color: #3498db;
   --secondary-color: #2ecc71;
   --font-family: "Urbanist";
-  --padding: 10px;
+  --grid-width: 1600px;
+}
+
+.row {
+  margin: 0 auto;
+  max-width: var(--grid-width);
+  padding: 0 20px;
+  position: relative;
+  width: 100%;
+}
+
+.header {
+  position: absolute;
+  top: 95px;
+  left: 0;
+  color: white;
+  width: 100%;
+  z-index: 2;
+}
+.header__logo {
+  fill: white;
+}
+.header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.header__nav {
+  font-size: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 35px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer {
+  background: #333;
+  color: white;
+  padding: 140px 0;
+  gap: 155px;
+}
+.footer-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 155px;
+}
+.footer__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  gap: 10px;
+}
+.footer__col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.footer__title {
+  font-size: 42px;
+}
+
+.section_hero {
+  background: #000;
+  color: white;
+  height: 100vh;
+}
+.section_hero__title {
+  position: absolute;
+  right: 45px;
+  bottom: 230px;
+  font-size: 235px;
+}
+.section_hero .row {
+  height: 100%;
 }
