--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -14,3 +14,19 @@
     width: 100%;
 
 }
+
+//min-width: 768px
+//min-width: 1024px
+//min-width: 1440px
+
+@media (min-width: 768px) {
+    // Tablet
+}
+
+@media (min-width: 1024px) {
+    // Tablet / escritorios pequeños
+}
+
+@media (min-width: 1440px) {
+    // Big PC
+}
