--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -107,7 +107,7 @@ input {
 
 .header {
   position: absolute;
-  top: 95px;
+  top: 30px;
   left: 0;
   color: white;
   width: 100%;
@@ -115,6 +115,8 @@ input {
 }
 .header__logo {
   fill: white;
+  height: auto;
+  width: 70px;
 }
 .header__row {
   display: -webkit-box;
@@ -125,16 +127,41 @@ input {
           justify-content: space-between;
 }
 .header__nav {
-  font-size: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 35px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: none;
 }
 
+@media (min-width: 768px) {
+  .header {
+    top: 95px;
+  }
+  .header__nav {
+    font-size: 16px;
+    gap: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: flex;
+  }
+  .header__logo {
+    height: auto;
+    width: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .header__nav {
+    font-size: 20px;
+    gap: 35px;
+  }
+}
+@media (min-width: 1440px) {
+  .header__nav {
+    font-size: 25px;
+    gap: 45px;
+  }
+}
 .footer {
   background: #333;
   color: white;
@@ -184,10 +211,29 @@ input {
 }
 .section_hero__title {
   position: absolute;
-  right: 45px;
   bottom: 230px;
-  font-size: 235px;
+  right: 20px;
+  font-size: 75px;
+  max-width: 240px;
 }
 .section_hero .row {
   height: 100%;
+}
+
+@media (min-width: 768px) {
+  .section_hero__title {
+    right: 45px;
+    font-size: 135px;
+    max-width: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  .section_hero__title {
+    font-size: 185px;
+  }
+}
+@media (min-width: 1440px) {
+  .section_hero__title {
+    font-size: 235px;
+  }
 }
