--- a/static/src/scss/partials/header.scss
+++ b/static/src/scss/partials/header.scss
@@ -1,6 +1,6 @@
 .header {
     position: absolute;
-    top: 95px;
+    top: 30px;
     left: 0;
     color: white;
     width: 100%;
@@ -8,6 +8,8 @@
 
     &__logo {
         fill: white;
+        height: auto;
+        width: 70px;
     }
 
     &__row {
@@ -16,9 +18,48 @@
     }
 
     &__nav {
-        font-size: 25px;
-        display: flex;
-        gap: 35px;
-        align-items: center;
+        display: none;
+    }
+
+
+}
+
+@media (min-width: 768px) {
+    .header {
+        top: 95px;
+
+        &__nav {
+            font-size: 16px;
+            gap: 16px;
+            display: flex;
+            align-items: center;
+            display: flex;
+        }
+
+        &__logo {
+            height: auto;
+            width: auto;
+        }
+    }
+
+}
+
+
+@media (min-width: 1024px) {
+
+    .header {
+        &__nav {
+            font-size: 20px;
+            gap: 35px;
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .header {
+        &__nav {
+            font-size: 25px;
+            gap: 45px;
+        }
     }
 }
