--- a/static/src/scss/partials/normalize.scss
+++ b/static/src/scss/partials/normalize.scss
@@ -12,8 +12,7 @@ html {
 
 body {
     background-color: var(--bg-primary);
-    color: black;
-
+    color: var(--primary-color);
     font: 1rem/1.1 var(--font-family);
     margin: 0;
     padding-top: 0;
