--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -4,3 +4,5 @@
 @import 'partials/header.scss';
 @import 'partials/footer.scss';
 @import 'partials/section_hero.scss';
+@import 'partials/section_about.scss';
+@import 'partials/section_how.scss';
