--- a/static/src/css/partials/normalize.css
+++ b/static/src/css/partials/normalize.css
@@ -13,7 +13,7 @@ html {
 
 body {
   background-color: var(--bg-primary);
-  color: black;
+  color: var(--primary-color);
   font: 1rem/1.1 var(--font-family);
   margin: 0;
   padding-top: 0;
