--- a/static/src/css/partials/ui.css
+++ b/static/src/css/partials/ui.css
@@ -1,7 +1,7 @@
 :root {
   --bg-primary: #fff;
-  --primary-color: #3498db;
-  --secondary-color: #2ecc71;
+  --primary-color: #333;
+  --secondary-color: #000;
   --font-family: "Urbanist";
   --grid-width: 1600px;
 }
@@ -12,4 +12,32 @@
   padding: 0 20px;
   position: relative;
   width: 100%;
+}
+
+.pager {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+.pager__a {
+  background: rgba(51, 51, 51, 0.3);
+  border-radius: 125px;
+  height: 8px;
+  width: 42px;
+  display: block;
+}
+.pager--right {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media (min-width: 768px) {
+  .pager {
+    gap: 8px;
+  }
+  .pager__a {
+    width: 95px;
+  }
 }
