--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -30,6 +30,10 @@
     &--right {
         justify-content: flex-end;
     }
+
+    &--center {
+        justify-content: center;
+    }
 }
 
 //min-width: 768px
