--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -6,3 +6,7 @@
 @import 'partials/section_hero.scss';
 @import 'partials/section_about.scss';
 @import 'partials/section_how.scss';
+@import 'partials/section_clients.scss';
+@import 'partials/section_belive.scss';
+@import 'partials/section_who_are.scss';
+@import 'partials/section_books.scss';
