--- a/static/src/css/partials/ui.css
+++ b/static/src/css/partials/ui.css
@@ -32,6 +32,11 @@
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
+.pager--center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 
 @media (min-width: 768px) {
   .pager {
