--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -75,6 +75,7 @@ button {
   cursor: pointer;
   outline: 0;
   padding: 0;
+  text-align: left;
   font-family: var(--font-family);
 }
 
@@ -122,6 +123,11 @@ input {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+.pager--center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media (min-width: 768px) {
@@ -445,4 +451,344 @@ input {
   .item_how__image {
     height: 368px;
   }
+}
+.clients {
+  background: #333333;
+  color: white;
+  padding: 30px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.clients__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.clients__title {
+  font-size: 25px;
+}
+.clients__slides {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  position: relative;
+}
+
+.loop_left {
+  animation-timeline: auto;
+  animation-range-start: normal;
+  animation-range-end: normal;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
+  -webkit-animation: 12s linear 0s infinite normal none running slider, running;
+          animation: 12s linear 0s infinite normal none running slider, running;
+}
+.loop_left__li {
+  padding: 0 10px;
+}
+
+@-webkit-keyframes slider {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0px);
+            transform: translate(-100%, 0px);
+  }
+}
+
+@keyframes slider {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0px);
+            transform: translate(-100%, 0px);
+  }
+}
+.loop_right {
+  animation-timeline: auto;
+  animation-range-start: normal;
+  animation-range-end: normal;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-animation: 30s linear 0s infinite normal none running slider2, running;
+          animation: 30s linear 0s infinite normal none running slider2, running;
+}
+.loop_right__li {
+  border-left: 1px solid white;
+  padding: 0 10px;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.clients__slides-left {
+  -webkit-transform: translate(-50%, 0px);
+          transform: translate(-50%, 0px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+@media (min-width: 768px) {
+  .clients {
+    padding: 40px 0;
+    gap: 40px;
+  }
+  .clients__header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media (min-width: 1024px) {
+  .clients__title {
+    font-size: 42px;
+  }
+  .clients__label {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1440px) {
+  .clients__title {
+    font-size: 42px;
+  }
+  .clients__label {
+    font-size: 25px;
+  }
+}
+@keyframes slider {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0px);
+            transform: translate(-100%, 0px);
+  }
+}
+@-webkit-keyframes slider2 {
+  0% {
+    -webkit-transform: translate(0%, 0px);
+            transform: translate(0%, 0px);
+  }
+  100% {
+    -webkit-transform: translate(100%, 0px);
+            transform: translate(100%, 0px);
+  }
+}
+@keyframes slider2 {
+  0% {
+    -webkit-transform: translate(0%, 0px);
+            transform: translate(0%, 0px);
+  }
+  100% {
+    -webkit-transform: translate(100%, 0px);
+            transform: translate(100%, 0px);
+  }
+}
+.belive {
+  padding: 30px 0;
+}
+.belive__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.belive__label {
+  font-size: 18px;
+}
+.belive__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.belive__text {
+  font-size: 20px;
+}
+
+@media (min-width: 768px) {
+  .belive {
+    padding: 40px 0;
+  }
+  .belive__row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .belive__label {
+    max-width: 120px;
+    display: block;
+  }
+  .belive__label {
+    font-size: 22px;
+  }
+  .belive__tag {
+    font-size: 25px;
+  }
+  .belive__text {
+    font-size: 30px;
+  }
+}
+.who_are {
+  background: #F3F2F0;
+  padding: 30px 0;
+}
+.who_are__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.who_are__img {
+  max-width: 100%;
+  width: 100%;
+}
+.who_are__title {
+  font-size: 28px;
+  margin: 0 0 15px;
+}
+.who_are__feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  font-size: 22px;
+}
+.who_are__content {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.who_are__content.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.who_are__hidden {
+  margin-top: 20px;
+}
+.who_are__button {
+  font-size: 18px;
+  border-bottom: 1px solid black;
+  display: inline-block;
+  width: auto;
+}
+
+@media (min-width: 768px) {
+  .who_are {
+    padding: 30px 0;
+  }
+  .who_are__item {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .who_are__figure {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 400px;
+            flex: 0 0 400px;
+  }
+}
+@media (min-width: 1024px) {
+  .who_are {
+    padding: 30px 0;
+  }
+  .who_are__figure {
+    width: 600px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 600px;
+            flex: 0 0 600px;
+  }
+}
+.books {
+  padding: 30px 0;
+}
+.books__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.books_item {
+  max-width: 300px;
+  height: 300px;
+  position: relative;
+}
+.books_item__img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+.books_item__btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 10px 14px;
+}
+.books_item__btn svg {
+  width: 30px;
+  height: 30px;
 }
