--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -10,3 +10,7 @@
 @import 'partials/section_belive.scss';
 @import 'partials/section_who_are.scss';
 @import 'partials/section_books.scss';
+@import 'partials/section_bio.scss';
+@import 'partials/section_twitter.scss';
+@import 'partials/section_interview.scss';
+@import 'partials/section_expect.scss';
