--- a/static/src/scss/partials/section_clients.scss
+++ b/static/src/scss/partials/section_clients.scss
@@ -37,8 +37,8 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    transition: all 18s ease 0s;
-    animation: 18s linear 0s infinite normal none running slider, running;
+    // transition: all 18s ease 0s;
+    animation: 78s linear 0s infinite normal none running slider, running;
 
     &__li {
         padding: 0 10px;
