--- a/static/src/css/partials/section_interview.css
+++ b/static/src/css/partials/section_interview.css
@@ -31,4 +31,67 @@
   border-bottom: 1px solid #000;
   margin: 10px 0 0;
   display: inline-block;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+@media (min-width: 1024px) {
+  .interview {
+    padding: 70px 0 50px;
+  }
+  .interview__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
+  .interview__title {
+    font-size: 38px;
+    margin: 0 0 20px;
+  }
+  .interview__lkn {
+    padding-bottom: 5px;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+    font-size: 19px;
+    max-width: 80px;
+    margin: 0 0 10px;
+  }
+  .interview__subtitle {
+    font-size: 32px;
+    -webkit-box-flex: 7;
+        -ms-flex: 7;
+            flex: 7;
+  }
+  .interview__item {
+    max-width: 650px;
+    gap: 25px;
+    padding: 35px;
+    margin: 0 0 40px;
+  }
+  .interview__date {
+    font-size: 18px;
+  }
+  .interview__info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    gap: 95px;
+  }
 }
