--- a/static/src/scss/partials/section_clients.scss
+++ b/static/src/scss/partials/section_clients.scss
@@ -107,6 +107,9 @@
 
     .clients {
 
+        padding-bottom: 80px;
+        padding-top: 80px;
+
         &__title {
             font-size: 42px;
         }
