--- a/static/src/scss/partials/section_interview.scss
+++ b/static/src/scss/partials/section_interview.scss
@@ -36,11 +36,62 @@
         border-bottom: 1px solid #000;
         margin: 10px 0 0;
         display: inline-block;
+        flex: 1;
     }
 }
 
 @media (min-width: 768px) {}
 
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+
+    .interview {
+        padding: 70px 0 50px;
+
+        &__row {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        &__img {}
+
+        &__title {
+            font-size: 38px;
+            margin: 0 0 20px;
+        }
+
+        &__lkn {
+            padding-bottom: 5px;
+            flex: 2;
+            font-size: 19px;
+            max-width: 80px;
+            margin: 0 0 10px;
+        }
+
+        &__subtitle {
+            font-size: 32px;
+            flex: 7;
+        }
+
+        &__item {
+            max-width: 650px;
+            gap: 25px;
+            padding: 35px;
+            margin: 0 0 40px;
+        }
+
+        &__date {
+            font-size: 18px;
+        }
+
+        &__info {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            align-items: flex-end;
+            gap: 95px;
+        }
+    }
+}
 
 @media (min-width: 1440px) {}
