--- a/static/src/css/partials/footer.css
+++ b/static/src/css/partials/footer.css
@@ -52,3 +52,45 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
+@media (min-width: 1024px) {
+  .footer {
+    padding: 80px 0;
+  }
+  .footer-row {
+    gap: 80px;
+  }
+  .footer__row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    font-size: 18px;
+  }
+  .footer__title {
+    font-size: 38px;
+    margin: -14px 0 0;
+  }
+  .footer__lkn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__col:last-child {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    max-width: 430px;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+  }
+  .footer__copy {
+    font-size: 14px;
+  }
+}
