--- a/static/src/css/partials/section_clients.css
+++ b/static/src/css/partials/section_clients.css
@@ -136,6 +136,10 @@
   }
 }
 @media (min-width: 1024px) {
+  .clients {
+    padding-bottom: 80px;
+    padding-top: 80px;
+  }
   .clients__title {
     font-size: 42px;
   }
