--- a/static/src/scss/partials/footer.scss
+++ b/static/src/scss/partials/footer.scss
@@ -34,3 +34,45 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (min-width: 768px) {}
+
+@media (min-width: 1024px) {
+
+    .footer {
+        padding: 80px 0;
+
+        &-row {
+            gap: 80px;
+        }
+
+        &__row {
+            flex-direction: row;
+            font-size: 18px;
+        }
+
+        &__title {
+            font-size: 38px;
+            margin: -14px 0 0;
+        }
+
+        &__lkn {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__col {
+            &:last-child {
+                flex-direction: column-reverse;
+                max-width: 430px;
+                flex: 2;
+            }
+        }
+
+        &__copy {
+            font-size: 14px;
+        }
+    }
+}
+
+@media (min-width: 1440px) {}
