--- a/static/src/css/partials/ui.css
+++ b/static/src/css/partials/ui.css
@@ -19,6 +19,7 @@
   display: -ms-flexbox;
   display: flex;
   gap: 12px;
+  font-size: 0;
 }
 .pager__a {
   background: rgba(51, 51, 51, 0.3);
@@ -26,6 +27,9 @@
   height: 8px;
   width: 42px;
   display: block;
+}
+.pager__a.active {
+  background: #AED27F;
 }
 .pager--right {
   -webkit-box-pack: end;
@@ -36,6 +40,22 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.swiper-pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  gap: 0;
+  position: relative !important;
+}
+.swiper-pagination .swiper-pagination-bullet {
+  margin: 0 !important;
+  background: rgba(51, 51, 51, 0.3);
+  border-radius: 125px;
+  height: 8px;
+  width: 42px;
 }
 
 @media (min-width: 768px) {
