--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -18,6 +18,7 @@
 .pager {
     display: flex;
     gap: 12px;
+    font-size: 0;
 
     &__a {
         background: rgba(51, 51, 51, .3);
@@ -25,6 +26,10 @@
         height: 8px;
         width: 42px;
         display: block;
+
+        &.active {
+            background: #AED27F;
+        }
     }
 
     &--right {
@@ -33,6 +38,22 @@
 
     &--center {
         justify-content: center;
+    }
+}
+
+
+.swiper-pagination {
+    display: flex;
+    font-size: 0;
+    gap: 0;
+    position: relative !important;
+
+    .swiper-pagination-bullet {
+        margin: 0 !important;
+        background: rgba(51, 51, 51, .3);
+        border-radius: 125px;
+        height: 8px;
+        width: 42px;
     }
 }
 
