--- a/static/src/css/partials/section_books.css
+++ b/static/src/css/partials/section_books.css
@@ -1,15 +1,13 @@
 .books {
   padding: 30px 0;
+  position: relative;
+  overflow: hidden;
 }
-.books__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.books .swiper-wrapper {
+  padding-bottom: 50px;
+}
+.books .swiper-slide {
+  max-width: 300px;
 }
 .books_item {
   max-width: 300px;
@@ -31,4 +29,20 @@
 .books_item__btn svg {
   width: 30px;
   height: 30px;
+}
+
+@media (min-width: 1024px) {
+  .books_item {
+    max-width: 480px;
+    height: 480px;
+  }
+  .books .swiper-slide {
+    max-width: 480px;
+  }
+  .books__btn {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 23px 30px;
+  }
 }
