--- a/static/src/css/partials/ui.css
+++ b/static/src/css/partials/ui.css
@@ -47,7 +47,7 @@
   display: -ms-flexbox;
   display: flex;
   font-size: 0;
-  gap: 0;
+  gap: 12px;
   position: relative !important;
 }
 .swiper-pagination .swiper-pagination-bullet {
@@ -56,6 +56,9 @@
   border-radius: 125px;
   height: 8px;
   width: 42px;
+}
+.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #AED27F !important;
 }
 
 @media (min-width: 768px) {
