--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -139,7 +139,7 @@ input {
   display: -ms-flexbox;
   display: flex;
   font-size: 0;
-  gap: 0;
+  gap: 12px;
   position: relative !important;
 }
 .swiper-pagination .swiper-pagination-bullet {
@@ -148,6 +148,9 @@ input {
   border-radius: 125px;
   height: 8px;
   width: 42px;
+}
+.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #AED27F !important;
 }
 
 @media (min-width: 768px) {
@@ -524,7 +527,7 @@ input {
   }
   .item_how__content {
     font-size: 22px;
-    min-height: 169px;
+    min-height: 190px;
     gap: 4px;
   }
   .item_how__header {
@@ -940,16 +943,14 @@ input {
 }
 .books {
   padding: 30px 0;
+  position: relative;
+  overflow: hidden;
 }
-.books__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.books .swiper-wrapper {
+  padding-bottom: 50px;
+}
+.books .swiper-slide {
+  max-width: 300px;
 }
 .books_item {
   max-width: 300px;
@@ -973,6 +974,21 @@ input {
   height: 30px;
 }
 
+@media (min-width: 1024px) {
+  .books_item {
+    max-width: 480px;
+    height: 480px;
+  }
+  .books .swiper-slide {
+    max-width: 480px;
+  }
+  .books__btn {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 23px 30px;
+  }
+}
 .bio {
   background: #F3F2F0;
   padding: 30px 0;
