--- a/static/src/scss/partials/section_books.scss
+++ b/static/src/scss/partials/section_books.scss
@@ -1,10 +1,15 @@
 .books {
     padding: 30px 0;
+    position: relative;
+    overflow: hidden;
 
-    &__row {
-        display: flex;
-        gap: 30px;
-        flex-direction: column;
+
+    .swiper-wrapper {
+        padding-bottom: 50px;
+    }
+
+    .swiper-slide {
+        max-width: 300px;
     }
 
     &_item {
@@ -35,6 +40,26 @@
 
 @media (min-width: 768px) {}
 
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+    .books {
+
+        &_item {
+            max-width: 480px;
+            height: 480px;
+        }
+
+        .swiper-slide {
+            max-width: 480px;
+        }
+
+
+        &__btn {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 23px 30px;
+        }
+    }
+}
 
 @media (min-width: 1440px) {}
