--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -45,7 +45,7 @@
 .swiper-pagination {
     display: flex;
     font-size: 0;
-    gap: 0;
+    gap: 12px;
     position: relative !important;
 
     .swiper-pagination-bullet {
@@ -54,7 +54,12 @@
         border-radius: 125px;
         height: 8px;
         width: 42px;
+
+        &.swiper-pagination-bullet-active {
+            background: #AED27F !important;
+        }
     }
+
 }
 
 //min-width: 768px
