--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -160,6 +160,9 @@ input {
   .pager__a {
     width: 95px;
   }
+  .swiper-pagination .swiper-pagination-bullet {
+    width: 95px;
+  }
 }
 .header {
   position: absolute;
