--- a/static/src/scss/partials/ui.scss
+++ b/static/src/scss/partials/ui.scss
@@ -76,6 +76,16 @@
             width: 95px;
         }
     }
+
+    .swiper-pagination {
+
+        .swiper-pagination-bullet {
+
+            width: 95px;
+
+        }
+
+    }
 }
 
 @media (min-width: 1024px) {
