--- a/static/src/css/partials/section_interview.css
+++ b/static/src/css/partials/section_interview.css
@@ -1,15 +1,7 @@
 .interview {
   padding: 30px 0;
-}
-.interview__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
+  position: relative;
+  overflow: hidden;
 }
 .interview__img {
   width: 100%;
@@ -40,6 +32,9 @@
   .interview {
     padding: 70px 0 50px;
   }
+  .interview .swiper-slide {
+    max-width: 530px;
+  }
   .interview__row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -68,6 +63,7 @@
     -webkit-box-flex: 7;
         -ms-flex: 7;
             flex: 7;
+    min-height: 104px;
   }
   .interview__item {
     max-width: 650px;
