--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -1119,16 +1119,8 @@ input {
 
 .interview {
   padding: 30px 0;
-}
-.interview__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
+  position: relative;
+  overflow: hidden;
 }
 .interview__img {
   width: 100%;
@@ -1159,6 +1151,9 @@ input {
   .interview {
     padding: 70px 0 50px;
   }
+  .interview .swiper-slide {
+    max-width: 530px;
+  }
   .interview__row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1187,6 +1182,7 @@ input {
     -webkit-box-flex: 7;
         -ms-flex: 7;
             flex: 7;
+    min-height: 104px;
   }
   .interview__item {
     max-width: 650px;
