--- a/static/src/scss/partials/section_interview.scss
+++ b/static/src/scss/partials/section_interview.scss
@@ -1,11 +1,8 @@
 .interview {
     padding: 30px 0;
+    position: relative;
+    overflow: hidden;
 
-    &__row {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
 
     &__img {
         width: 100%;
@@ -47,6 +44,10 @@
     .interview {
         padding: 70px 0 50px;
 
+        .swiper-slide {
+            max-width: 530px;
+        }
+
         &__row {
             display: flex;
             flex-direction: column;
@@ -58,6 +59,7 @@
         &__title {
             font-size: 38px;
             margin: 0 0 20px;
+
         }
 
         &__lkn {
@@ -71,6 +73,7 @@
         &__subtitle {
             font-size: 32px;
             flex: 7;
+            min-height: 104px;
         }
 
         &__item {
